# mundo-premium

./: .gitattributes  TASK.md  analyze_native.py  final_java_polish.py  find_natives.py  fix_java_structure.py  msao_exports.txt  native_analysis.txt  qbyr_exports.txt  reorganize_sdk.py  settings.gradle
.ipynb_checkpoints/: libmsaoaidsec_pseudocode-checkpoint.cpp  libqbyr5rthukuw_pseudocode-checkpoint.cpp
BlackBox-sdk/: settings.gradle
BlackBox-sdk/Knoxycore/: build.gradle  consumer-rules.pro
BlackBox-sdk/Knoxycore/black-fake/: build.gradle
BlackBox-sdk/Knoxycore/pine-xposed/: build.gradle
BlackBox-sdk/Knoxycore/pine-xposed-res/: build.gradle
BlackBox-sdk/Knoxycore/src/main/: AndroidManifest.xml
BlackBox-sdk/android-mirror/src/main/: AndroidManifest.xml
BlackBox-sdk/app/: build.gradle
BlackBox-sdk/app/src/main/: AndroidManifest.xml
home/user/workspace/mundo/: deobfuscate.py
java-side/top/bienvenido/date_24323/: a$1.java  a.java  a0.java  a1.java  a2.java  a3.java  (+599 more)
mundo-premium-sdk/: build.gradle  randomize_so_name.sh
mundo-premium-sdk/.ipynb_checkpoints/: build-checkpoint.gradle
mundo-premium-sdk/src/main/: AndroidManifest.xml
mundo-premium-sdk/src/main/cpp/: CMakeLists.txt  main.cpp  mundo_core.cpp  mundo_jni.cpp
mundoloader-src/: build.gradle
mundoloader-src/app/: gradle.properties  local.properties  proguard-rules.pro
mundoloader-src/app/src/: README.txt
workspace/mundo/: deobfuscate.py
workspace/mundo/aar_extracted/: proguard.txt
workspace/mundo/dex_output/: classes.dex
workspace/mundo/mundo-sdk-recovered/: full_mapping.json
(+3880 files in other folders)
